k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rsoi-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 80
